--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/wasabina67/wasabina67-npm/issues"
   },
-  "homepage": "https://github.com/wasabina67/wasabina67-npm#readme"
+  "homepage": "https://github.com/wasabina67/wasabina67-npm#readme",
+  "bin": {
+    "wasabina67": "./index.js"
+  },
+  "type": "module"
 }
