--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wasabina67-npm",
-  "version": "1.0.1",
+  "name": "wasabina67",
+  "version": "1.0.2",
   "description": "wasabina67 npm",
   "main": "index.js",
   "scripts": {
